// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders "No events" when no events" 1`] = `
<div>
  <div
    class="_noEventWrapper_94137a"
  >
    <h2>
      Tapahtumakutsut
    </h2>
    <div
      class="_noEvent_94137a"
    >
      <div
        class="_imgWrapper_73ff55 _envelopIcon_94137a"
      >
        <img
          alt=""
          src="/icons/svg/envelopeWithStars.svg"
        />
      </div>
      <p>
        Tänne saapuvat sinulle lähetetyt tapahtumakutsut. Pääset myös ilmoittautumaan tapahtumiin ja perumaan ilmoittautumisen, jos et jostain syystä pääsekään osallistumaan tapahtumaan.
      </p>
    </div>
  </div>
</div>
`;

exports[`Renders events list when events of any type 1`] = `
<div>
  <ul
    class="_list_a90dcd _spacing-xl_a90dcd"
  >
    <li
      class="_item_a90dcd"
    >
      <h2
        class="_text_e4e173 _h2_e4e173 "
      >
        Tulevat tapahtumasi
      </h2>
      <ul
        class="_list_a90dcd _spacing-layout-2-xs_a90dcd"
      >
        <li
          class="_item_a90dcd"
        >
          <div
            class="_wrapper_f3c708"
            role="button"
            tabindex="0"
          >
            <div
              class="_image_f3c708 _fullHeight_f3c708"
            >
              <div
                class="_qrWrapper_e3c7ac"
              >
                <div />
              </div>
            </div>
            <div
              class="_content_f3c708"
            >
              <h3
                class="_text_e4e173 _h3_e4e173 _title_f3c708"
              >
                pentti
              </h3>
              <p
                class="_text_e4e173 _body_e4e173 "
              >
                eventti
              </p>
              <div
                class="_focalPoint_f3c708"
              >
                <span>
                  <div
                    class="_row_e93b69"
                  >
                    <div
                      class="_label_e93b69 _fullWidth_e93b69"
                      id="venue"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="location"
                        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.9669 1.5C14.0265 1.5 16.0869 2.27765 17.6579 3.83367C20.8001 6.945 20.5878 11.7938 17.6579 15.1017L17.0345 15.8107C14.4235 18.8021 12.9688 20.7706 11.9669 22.7477C10.8937 20.6185 9.28527 18.4993 6.27797 15.1017C3.34814 11.7938 3.13508 6.945 6.27797 3.83367C7.84906 2.27765 9.90869 1.5 11.9669 1.5ZM11.999 3.5C10.3743 3.5 8.84685 4.12598 7.69956 5.26179C6.56645 6.38341 5.97897 7.81769 6.00058 9.41066C6.02151 10.984 6.64884 12.5453 7.76709 13.8087L8.42773 14.5606C10.0167 16.3842 11.1442 17.8 12.0004 19.0644C12.9748 17.6274 14.2916 16.0006 16.233 13.8087C17.3512 12.5453 17.9786 10.984 17.9995 9.41066C18.0198 7.81769 17.4323 6.38341 16.3005 5.26179C15.1519 4.12598 13.6251 3.5 11.999 3.5ZM12.0004 6C13.9338 6 15.5 7.56702 15.5 9.50039C15.5 11.433 13.9338 13 12.0004 13C10.067 13 8.5 11.433 8.5 9.50039C8.5 7.56702 10.067 6 12.0004 6ZM12.0003 8C11.1725 8 10.5 8.67319 10.5 9.50034C10.5 10.3268 11.1725 11 12.0003 11C12.8275 11 13.5 10.3268 13.5 9.50034C13.5 8.67319 12.8275 8 12.0003 8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <div>
                        <p
                          class="_text_e4e173 _body_e4e173 _label_e93b69"
                        />
                      </div>
                    </div>
                    <div
                      class="_label_e93b69"
                      id="time"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="calendar"
                        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M17 2C17.5523 2 18 2.44772 18 3V4H22V21H2V4H6V3C6 2.44772 6.44772 2 7 2C7.55228 2 8 2.44772 8 3V4H16V3C16 2.44772 16.4477 2 17 2ZM20 11H4V19H20V11ZM20 6H4V9H20V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <div>
                        <p
                          class="_text_e4e173 _body_e4e173 _label_e93b69"
                        >
                          24.2.2020
                        </p>
                      </div>
                    </div>
                    <div
                      class="_label_e93b69"
                      id="duration"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="clock"
                        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM13 6L13.0006 11.584L16.2426 14.8284L14.8284 16.2426L11.2929 12.7071L11.2946 12.706L11.0007 12.4138L11 6H13Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <div>
                        <p
                          class="_text_e4e173 _body_e4e173 _label_e93b69"
                        >
                          09:07 - 09:19
                        </p>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="_cta_f3c708"
            >
              <button
                aria-label="Näytä tapahtuman tiedot"
                class="Button-module_button__1msFE Button-module_supplementary__3YKiS _actionWrapper_f3c708"
                style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: transparent; --background-color-hover: transparent; --background-color-focus: transparent; --background-color-hover-focus: transparent; --background-selected: var(--color-summer); --border-color: none; --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    aria-label="angle-right"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.5 12L8.5 7L10 5.5L16.5 12L10 18.5L8.5 17L13.5 12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </li>
    <li
      class="_item_a90dcd"
    >
      <h2
        class="_text_e4e173 _h2_e4e173 "
      >
        Tapahtumakutsut
      </h2>
      <ul
        class="_list_a90dcd _spacing-layout-2-xs_a90dcd"
      >
        <li
          class="_item_a90dcd"
        >
          <div
            class="_wrapper_f3c708"
            role="button"
            tabindex="0"
          >
            <div
              class="_image_f3c708 _fullHeight_f3c708"
            >
              <img
                alt="uooo"
                class="_image_f3c708"
                src="http://localhost:8081/media/2020-02-15-184035_1920x1080_scrot.png"
              />
            </div>
            <div
              class="_content_f3c708"
            >
              <h3
                class="_text_e4e173 _h3_e4e173 _title_f3c708"
              >
                pentti
              </h3>
              <p
                class="_text_e4e173 _body_e4e173 "
              >
                eventti
              </p>
              <div
                class="_focalPoint_f3c708"
              >
                <button
                  class="Button-module_button__1msFE Button-module_primary__2LfKB _primaryActionButton_f3c708"
                  style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: var(--color-summer); --background-color-hover: var(--color-summer-dark); --background-color-focus: var(--color-summer); --background-color-hover-focus: var(--color-summer-dark); --background-selected: var(--color-summer); --border-color: var(--color-summer); --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Lue lisää
                  </span>
                </button>
                <span />
              </div>
            </div>
            <div
              class="_cta_f3c708"
            >
              <button
                aria-label="Lue lisää"
                class="Button-module_button__1msFE Button-module_supplementary__3YKiS _actionWrapper_f3c708"
                style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: transparent; --background-color-hover: transparent; --background-color-focus: transparent; --background-color-hover-focus: transparent; --background-selected: var(--color-summer); --border-color: none; --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    aria-label="angle-right"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.5 12L8.5 7L10 5.5L16.5 12L10 18.5L8.5 17L13.5 12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </li>
    <li
      class="_item_a90dcd"
    >
      <h2
        class="_text_e4e173 _h2_e4e173 "
      >
        Menneet tapahtumat
      </h2>
      <ul
        class="_list_a90dcd _spacing-layout-2-xs_a90dcd"
      >
        <li
          class="_item_a90dcd"
        >
          <div
            class="_wrapper_f3c708"
            role="button"
            tabindex="0"
          >
            <div
              class="_image_f3c708 _fullHeight_f3c708"
            >
              <img
                alt="uooo"
                class="_image_f3c708"
                src="http://localhost:8081/media/2020-02-15-184035_1920x1080_scrot.png"
              />
            </div>
            <div
              class="_content_f3c708"
            >
              <h3
                class="_text_e4e173 _h3_e4e173 _title_f3c708"
              >
                pentti
              </h3>
              <p
                class="_text_e4e173 _body_e4e173 "
              >
                eventti
              </p>
              <div
                class="_focalPoint_f3c708"
              >
                <span />
              </div>
            </div>
            <div
              class="_cta_f3c708"
            >
              <button
                aria-label="Näytä tapahtuman tiedot"
                class="Button-module_button__1msFE Button-module_supplementary__3YKiS _actionWrapper_f3c708"
                style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: transparent; --background-color-hover: transparent; --background-color-focus: transparent; --background-color-hover-focus: transparent; --background-selected: var(--color-summer); --border-color: none; --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    aria-label="angle-right"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.5 12L8.5 7L10 5.5L16.5 12L10 18.5L8.5 17L13.5 12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Renders events list when only enrolments 1`] = `
<div>
  <ul
    class="_list_a90dcd _spacing-xl_a90dcd"
  >
    <li
      class="_item_a90dcd"
    >
      <h2
        class="_text_e4e173 _h2_e4e173 "
      >
        Tulevat tapahtumasi
      </h2>
      <ul
        class="_list_a90dcd _spacing-layout-2-xs_a90dcd"
      >
        <li
          class="_item_a90dcd"
        >
          <div
            class="_wrapper_f3c708"
            role="button"
            tabindex="0"
          >
            <div
              class="_image_f3c708 _fullHeight_f3c708"
            >
              <div
                class="_qrWrapper_e3c7ac"
              >
                <div />
              </div>
            </div>
            <div
              class="_content_f3c708"
            >
              <h3
                class="_text_e4e173 _h3_e4e173 _title_f3c708"
              >
                pentti
              </h3>
              <p
                class="_text_e4e173 _body_e4e173 "
              >
                eventti
              </p>
              <div
                class="_focalPoint_f3c708"
              >
                <span>
                  <div
                    class="_row_e93b69"
                  >
                    <div
                      class="_label_e93b69 _fullWidth_e93b69"
                      id="venue"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="location"
                        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.9669 1.5C14.0265 1.5 16.0869 2.27765 17.6579 3.83367C20.8001 6.945 20.5878 11.7938 17.6579 15.1017L17.0345 15.8107C14.4235 18.8021 12.9688 20.7706 11.9669 22.7477C10.8937 20.6185 9.28527 18.4993 6.27797 15.1017C3.34814 11.7938 3.13508 6.945 6.27797 3.83367C7.84906 2.27765 9.90869 1.5 11.9669 1.5ZM11.999 3.5C10.3743 3.5 8.84685 4.12598 7.69956 5.26179C6.56645 6.38341 5.97897 7.81769 6.00058 9.41066C6.02151 10.984 6.64884 12.5453 7.76709 13.8087L8.42773 14.5606C10.0167 16.3842 11.1442 17.8 12.0004 19.0644C12.9748 17.6274 14.2916 16.0006 16.233 13.8087C17.3512 12.5453 17.9786 10.984 17.9995 9.41066C18.0198 7.81769 17.4323 6.38341 16.3005 5.26179C15.1519 4.12598 13.6251 3.5 11.999 3.5ZM12.0004 6C13.9338 6 15.5 7.56702 15.5 9.50039C15.5 11.433 13.9338 13 12.0004 13C10.067 13 8.5 11.433 8.5 9.50039C8.5 7.56702 10.067 6 12.0004 6ZM12.0003 8C11.1725 8 10.5 8.67319 10.5 9.50034C10.5 10.3268 11.1725 11 12.0003 11C12.8275 11 13.5 10.3268 13.5 9.50034C13.5 8.67319 12.8275 8 12.0003 8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <div>
                        <p
                          class="_text_e4e173 _body_e4e173 _label_e93b69"
                        />
                      </div>
                    </div>
                    <div
                      class="_label_e93b69"
                      id="time"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="calendar"
                        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M17 2C17.5523 2 18 2.44772 18 3V4H22V21H2V4H6V3C6 2.44772 6.44772 2 7 2C7.55228 2 8 2.44772 8 3V4H16V3C16 2.44772 16.4477 2 17 2ZM20 11H4V19H20V11ZM20 6H4V9H20V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <div>
                        <p
                          class="_text_e4e173 _body_e4e173 _label_e93b69"
                        >
                          24.2.2020
                        </p>
                      </div>
                    </div>
                    <div
                      class="_label_e93b69"
                      id="duration"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="clock"
                        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM13 6L13.0006 11.584L16.2426 14.8284L14.8284 16.2426L11.2929 12.7071L11.2946 12.706L11.0007 12.4138L11 6H13Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <div>
                        <p
                          class="_text_e4e173 _body_e4e173 _label_e93b69"
                        >
                          11:09 - 11:21
                        </p>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="_cta_f3c708"
            >
              <button
                aria-label="Näytä tapahtuman tiedot"
                class="Button-module_button__1msFE Button-module_supplementary__3YKiS _actionWrapper_f3c708"
                style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: transparent; --background-color-hover: transparent; --background-color-focus: transparent; --background-color-hover-focus: transparent; --background-selected: var(--color-summer); --border-color: none; --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    aria-label="angle-right"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.5 12L8.5 7L10 5.5L16.5 12L10 18.5L8.5 17L13.5 12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Renders events list when only past events 1`] = `
<div>
  <ul
    class="_list_a90dcd _spacing-xl_a90dcd"
  >
    <li
      class="_item_a90dcd"
    >
      <h2
        class="_text_e4e173 _h2_e4e173 "
      >
        Menneet tapahtumat
      </h2>
      <ul
        class="_list_a90dcd _spacing-layout-2-xs_a90dcd"
      >
        <li
          class="_item_a90dcd"
        >
          <div
            class="_wrapper_f3c708"
            role="button"
            tabindex="0"
          >
            <div
              class="_image_f3c708 _fullHeight_f3c708"
            >
              <img
                alt="uooo"
                class="_image_f3c708"
                src="http://localhost:8081/media/2020-02-15-184035_1920x1080_scrot.png"
              />
            </div>
            <div
              class="_content_f3c708"
            >
              <h3
                class="_text_e4e173 _h3_e4e173 _title_f3c708"
              >
                pentti
              </h3>
              <p
                class="_text_e4e173 _body_e4e173 "
              >
                eventti
              </p>
              <div
                class="_focalPoint_f3c708"
              >
                <span />
              </div>
            </div>
            <div
              class="_cta_f3c708"
            >
              <button
                aria-label="Näytä tapahtuman tiedot"
                class="Button-module_button__1msFE Button-module_supplementary__3YKiS _actionWrapper_f3c708"
                style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: transparent; --background-color-hover: transparent; --background-color-focus: transparent; --background-color-hover-focus: transparent; --background-selected: var(--color-summer); --border-color: none; --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    aria-label="angle-right"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.5 12L8.5 7L10 5.5L16.5 12L10 18.5L8.5 17L13.5 12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Renders events list when only upcomingEventsAndEventGroups 1`] = `
<div>
  <ul
    class="_list_a90dcd _spacing-xl_a90dcd"
  >
    <li
      class="_item_a90dcd"
    >
      <h2
        class="_text_e4e173 _h2_e4e173 "
      >
        Tapahtumakutsut
      </h2>
      <ul
        class="_list_a90dcd _spacing-layout-2-xs_a90dcd"
      >
        <li
          class="_item_a90dcd"
        >
          <div
            class="_wrapper_f3c708"
            role="button"
            tabindex="0"
          >
            <div
              class="_image_f3c708 _fullHeight_f3c708"
            >
              <img
                alt="uooo"
                class="_image_f3c708"
                src="http://localhost:8081/media/2020-02-15-184035_1920x1080_scrot.png"
              />
            </div>
            <div
              class="_content_f3c708"
            >
              <h3
                class="_text_e4e173 _h3_e4e173 _title_f3c708"
              >
                pentti
              </h3>
              <p
                class="_text_e4e173 _body_e4e173 "
              >
                eventti
              </p>
              <div
                class="_focalPoint_f3c708"
              >
                <button
                  class="Button-module_button__1msFE Button-module_primary__2LfKB _primaryActionButton_f3c708"
                  style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: var(--color-summer); --background-color-hover: var(--color-summer-dark); --background-color-focus: var(--color-summer); --background-color-hover-focus: var(--color-summer-dark); --background-selected: var(--color-summer); --border-color: var(--color-summer); --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Lue lisää
                  </span>
                </button>
                <span />
              </div>
            </div>
            <div
              class="_cta_f3c708"
            >
              <button
                aria-label="Lue lisää"
                class="Button-module_button__1msFE Button-module_supplementary__3YKiS _actionWrapper_f3c708"
                style="--color: var(--color-black); --color-hover: var(--color-black); --color-focus: var(--color-black-90); --color-hover-focus: var(--color-black-90); --background-color: transparent; --background-color-hover: transparent; --background-color-focus: transparent; --background-color-hover-focus: transparent; --background-selected: var(--color-summer); --border-color: none; --border-color-hover: var(--color-summer-dark); --border-color-focus: var(--color-summer-dark); --border-color-hover-focus: var(--color-summer-dark); --border-color-selected: var(--color-summer); --border-color-selected-hover: var(--color-summer-dark); --border-color-selected-focus: var(--color-summer); --border-color-selected-hover-focus: var(--color-summer);"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    aria-label="angle-right"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_small__gTGkU icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M13.5 12L8.5 7L10 5.5L16.5 12L10 18.5L8.5 17L13.5 12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
